mule-fundamentals/v/3.4/deploying-mule-applications.adoc
= Deploying Mule Applications 

Depending upon the set-up and demands of your production environment, there are numerous ways of deploying Mule applications. This document offers a brief overview of some of the ways you can deploy your Mule applications from Studio

. Deploy to the embedded test server
. Deploy to a Mule Enterprise server
. Publish to the Mule Management Console Application Repository
. Deploy to Cloudhub +

== Deploy on the Embedded Test Server

To test your application, run it locally on the *Mule server embedded in Studio*. Bundled with Mule Studio, the embedded Mule test server can run for up to 12 hours before it must be restarted. +

image:deploy_embedded.png[deploy_embedded]

When you specify *Run as a Mule Application*, Studio automatically builds and deploys your application to the internal Mule server, which starts automatically, if necessary.

. In the *Package Explorer*, right-click your project’s name, then select *Run As* > *Mule Application*.
. Studio runs the application on the embedded Mule test server. (Unless you stop it, Studio runs the application for a period of 12 hours.) View the application’s activities in the Studio console.
. To stop the application from running, click the red, terminate button at the top edge of the console. +
 +
image:terminate_button2.png[terminate_button2] +

== Deploy on a Mule Enterprise Server

Export the Studio application to a zip file, then run it on a *Mule Enterprise server*. This approach is ideal for Mule servers in production environments. The zip file contains all the resources (such as code libraries and application metadata) necessary to run the application, and import it into Studio again for further development. +

image:deploy_server.png[deploy_server]


Deploying a Studio-built application in production on an Mule Enterprise server involves three steps:

. Export the application from Studio.
. Launch the Enterprise server.
. Deploy the application on the Enterprise server. +

==== Exporting an Application from Studio

Studio lets you save a project as a Mule Deployable Archive (i.e. zip file). Such a packaged Mule archive provides a convenient method for transferring files between editions of Studio or backing up Studio projects. The package includes all information specific to your application(s), including flows, configuration files, Java classes, referenced HTML files, and more.

. Right-click the project name in the *Package Explorer* pane, then select **Export . . .**.
. In the *Export* wizard, click *Mule* to expand the associated node, select **Mule Studio Project to Mule Deployable Archive (includes Studio metadata)**, then click *Next*. +
 +
image:export_archive.png[export_archive] +

. Select an output folder to which your project archive will be saved, then click *Finish*. +

==== Launching the Enterprise Server

. If you do not already have *Mule ESB Enterprise Standalone* installed on your system, download the **http://www.mulesoft.com/mule-esb-enterprise-30-day-trial[Mule ESB Enterprise Runtime trial]**.
. Start Mule.

[TIP]
====
*Need more detail?*

.. Open a new command line. +
 *Windows*: Open the *Console*. +
 *Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
.. Access the directory and folder in which you unpacked Mule Standalone (i.e. the application folder in Mule). For example, type `cd /Users/aaron/Downloads/mule-enterprise-standalone-3.4.1/`
.. Start Mule. For example, type `./bin/mule`
====

==== Deploying an Application on the Enterprise Server

. Navigate to the folder on your local drive into which saved your archived Studio application, then copy the zip file.
. Navigate to the folder that contains your copy of *Mule ESB Standalone*, then paste the application’s zip file into the `apps` folder.
. Mule polls the `apps` folder every 5 seconds; it picks up the application you copied to the `apps` folder, then extracts and deploys it automatically. In the command line, Mule notifies you that it has deployed the application.
+
----
 ***            - - + APPLICATION + - -            * - - + STATUS + - - ** my_first_application                  * DEPLOYED           ** mmc                                           * DEPLOYED           ** default                                         * DEPLOYED           ** 00_mmc-agent                            * DEPLOYED           ***INFO  2012-10-29 15:40:57,516 [WrapperListener_start_runner] org.mule.module.launcher.DeploymentService: +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ Mule is up and kicking (every 5000ms)                    +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----

. If you wish to undeploy your application but keep Mule ESB running, navigate to the `app` directory and delete the file `your_application.txt`. This removes your application from the `/app` directory.
. To stop Mule ESB from running in the command line, hit **CTRL-C**. +

== Publish to the Mule Management Console Application Repository

You can publish the application to the *Application Repository* in the *Mule Management Console*. Once in the repository, the application can be deployed from the repository to multiple Mule server instances, and even to multi-node Mule *clusters*. (The Mule Management Console is only available in Mule ESB Enterprise Edition.) +

image:deploy_mmc.png[deploy_mmc]

Once in the repository, the application can be deployed from the Repository to multiple Mule server instances and even to multi-node high-availability clusters. To publish an application to the management console’s app repo, you must first download, then install and set-up Mule ESB Standalone with Mule Management Console. Access the management console’s link:/mule-management-console/v/3.4/mmc-walkthrough[Walkthrough] to set up a console environment, then complete the following steps to publish your Studio application to its application repository.

. In Studio, right-click the project name in the *Package Explorer* pane, then select *Mule Management Console* > *Publish to Application Repository . . .*
. In the publication wizard, input a value for each of the fields to specify the location, login credentials of your management console, and the settings for your application.
. Click *Finish* to publish the app to the repository.
. Follow the directions in the management console link:/mule-management-console/v/3.4/mmc-walkthrough[Walkthrough] to deploy your application to the Mule server (or cluster of servers). +

== Deploy to CloudHub

Deploy the application to *CloudHub*, Mule’s platform for cloud-based integration. CloudHub represents the least painful approach for fast, worry-free cloud-to-cloud and cloud-to-on-premises deployment. +

image:deploy_cloudhub.png[deploy_cloudhub]

CloudHub is a cloud-based integration Platform as a Service (iPaaS). It provides a convenient way for developers to launch their applications on a cloud platform, while also providing many enhanced features for solving cloud-to-cloud and cloud-to-premise integration problems. Mule Studio is fully integrated with CloudHub and facilitates simple application deployment.

Deploying a Studio-built application to CloudHub involves three steps:

. Create a CloudHub account.
. Adapt your Studio application to CloudHub.
. Deploy your Studio application to CloudHub. +

==== Creating a CloudHub Account

. If you have a *Mule Community* account, simply log into https://cloudhub.io/login.html[CloudHub] using your Community credentials. If you do not have a community account, go to https://cloudhub.io/signup.html[cloudhub.io/signup.html] to create an account.
. Next, visit https://cloudhub.io/login.html[cloudhub.io/login.html] to log in to the CloudHub interface.

For this example, however, deploy the application directly from Studio, as detailed below.

==== Adapting an Application for CloudHub

Many projects can be deployed directly to CloudHub. However, some projects require minor modifications, as summarized below.

* If you are deploying a project that listens on a *static port*, you need to change the port to a dynamic value so that CloudHub can set it at deployment time. To do so, change your port values to `${http.port`}. You can create an `application.properties` file that allows you to run your project locally on a specific port and also on CloudHub as a dynamic port. See the example Hello World on CloudHub for details on how to create this file.
* If using the *Jetty* component, set the host to `0.0.0.0` instead of `localhost`. +

==== Deploying an Application to CloudHub

. In Studio, right-click the project name in the *Package Explorer* pane, then select *CloudHub* > *Deploy to CloudHub . . .*
. In the deployment wizard, enter your CloudHub login credentials, then choose a domain in which to deploy your application. The value you enter must be a unique sub-domain which CloudHub creates for your application on the cloudhub.io domain such as, `My-Project-Name`. CloudHub automatically checks the availability of the sub-domain, then displays a checkmark icon to confirm that your entry is unique. +
 +
image:subdomain.png[subdomain] +

. Click *Finish* to deploy your application to CloudHub.
. On your Web browser, access your CloudHub console (`https://cloudhub.io/console.html#`) to view your newly deployed application. +
 +
image:deployed_cloud.png[deployed_cloud]

== See Also

* **NEXT STEP:** Learn about how to http://www.mulesoft.org/documentation/display/current/Mule+Security[secure] your Mule application.
* Learn more about the link:/mule-management-console/v/3.4[Mule Management Console].
* Learn more about <<Creating a CloudHub Account>>.
